<resources>
    <string name="app_name">Edu Sign</string>
    <string name="title_activity_detail">Title Detail</string>
    <string name="start_capture">Start Capture</string>
    <string name="stop_capture">Stop Capture</string>
    <string name="menu_title_bottom_nav_home">Challenge</string>
    <string name="menu_title_bottom_nav_dictionary">Dictionary</string>
    <string name="menu_title_blank" translatable="false">" "</string>
    <string name="menu_title_bottom_nav_library">DICTIONARY</string>
    <string name="challenge">Selamat datang di </string>
    <string name="soal_challenge">Kata</string>
    <string name="edusign">EduSign</string>
    <string name="ambil_ulang_video">Ambil Ulang video</string>
    <string name="hasil_terjemahan">Hasil Terjemahan</string>
    <string name="terjemahan">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam felis enim, hendrerit ut felis id, ultrices posuere augue. Phasellus a suscipit erat. Suspendisse ac iaculis eros, et finibus justo. Vivamus consectetur est nibh, ut suscipit nulla convallis sed. Integer pretium metus vel libero feugiat, vitae sodales risus cursus. Vivamus vestibulum congue tortor, id pellentesque erat varius et. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Nulla facilisi.</string>
    <string name="Error">Gagal Mengambil Data</string>
    <string name="dictionary_item">item dictionary</string>
    <string name="search">Cari Kata Disini</string>
    <string name="challenge_category_1">Hewan</string>
    <string name="challenge_category_2">Anggota Tubuh</string>
    <string name="challenge_category_3">Warna</string>
    <string name="challenge_category_4">Keluarga</string>
    <string name="challenge_category_1_question">Peragakan Gerakan untuk kata di bawah</string>
    <string name="start_challenge">Start ></string>
    <string name="question1">1</string>
    <string name="question2">2</string>
    <string name="question3">3</string>
    <string name="question4">4</string>
    <string name="question5">5</string>
    <string name="answer">Peragakan</string>
    <string name="next">next ></string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="progress">progress</string>
    <string name="task_completed">task</string>>
    <string name="value">0</string>
    <string name="percent">%</string>
    <string name="per5">/5</string>
    <string name="welcome_challenge1">welcome to challenge 1</string>
    <string name="challenge_introduction">challenge ini berisi tentang blablablabla</string>
    <string name="kembali">kembali</string>
    <string name="mulai">mulai</string>
    <string name="back_to_soal">Kembali ke Soal</string>
    <string name="jawaban_benar">Jawaban anda benar</string>
    <string name="jawaban_salah">Jawaban anda salah</string>
    <string name="gajah">Gajah</string>
    <string name="telinga">Telinga</string>
    <string name="biru">Biru</string>
    <string name="ibu">Nenek</string>
    <string name="user_progress_title">Progress Pembelajaranmu</string>


    <integer-array name="data_photo">
        <item>@drawable/category1_animal</item>
        <item>@drawable/category2_body_parts</item>
        <item>@drawable/category4_keluarga</item>
        <item>@drawable/category3_warna</item>
        <item>@drawable/category5_jobs</item>
        <item>@drawable/category6_sapaan</item>
    </integer-array>


    <string-array name="data_name">
        <item>Hewan</item>
        <item>Anggota \nTubuh</item>
        <item>Warna</item>
        <item>Keluarga</item>
        <item>Pekerjaan</item>
        <item>Sapaan</item>
    </string-array>


</resources>